# genie-studio

./: .gitignore  DEVELOPER_GUIDELINES.md  README.md  TODO.md  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
pm/: Dockerfile  __main__.py  docker-compose.yml
pm/assets/: style.qss
pm/core/: action_manager.py  app_core.py  background_tasks.py  chat_manager.py  constants.py  gemini_service.py  llm_service_provider.py  logging_setup.py  model_list_service.py  model_registry.py  ollama_service.py  project_config.py  prompts.py  rag_service.py  settings_service.py  task_manager.py  token_utils.py  workspace_manager.py
pm/handlers/: change_queue_handler.py  chat_action_handler.py  prompt_action_handler.py  settings_action_handler.py  workspace_action_handler.py
pm/ui/: benchmark_dialog.py  change_queue_widget.py  chat_message_widget.py  config_dock.py  diff_dialog.py  highlighter.py  main_window.py  main_window_ui.py  prompt_editor_dialog.py  settings_dialog.py
pm/ui/controllers/: status_bar_controller.py
tests/: conftest.py  test_app_init.py  test_basic_imports.py  test_change_queue_handler.py  test_chat_manager.py  test_llm_service_provider.py  test_model_registry.py  test_ollama.py  test_rag_service.py  test_settings_service.py  test_task_manager.py  test_token_utils.py  test_workspace_manager.py
