[tool.poetry]
name = "patchmind-ide"
version = "0.2.1"
description = "PatchMind IDE with LLM chat, patch mode, and RAG"
authors = ["Kal Aeolian <kal@example.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
PySide6 = "^6.6.3"
loguru = "^0.7"
google-generativeai = "^0.8.5"
ollama = "^0.1.7"
tiktoken = "^0.6"
markdown2 = "^2.4"
qdarktheme = "^1.3"
qtawesome = "^1.3"

[tool.poetry.group.dev.dependencies]
black = "^24.3"
ruff = "^0.3"
